<resources>
    <!-- Strings related to login -->
    <string name="app_name">Żółw+</string>
    <string name="prompt_email">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Żółw+</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="back">Wróć</string>
...
